tests/vendor/invalid/syntax/wrong_ternary_delimiter.c
//tags: simple, conditional
int main() {
    int x = 10;
    return x ? 1 = 2;
}